tests/invalid/If_Invalid_3.whiley
function f(bool z) -> int:
    int r = 0
    //
    if z:                
        for z in [1, 2, 3]:
            r = r + 1
    //
    return r